@@ -1,4 +1,4 @@
-/* Licensed under MIT 2023. */
+/* Licensed under MIT 2023-2025. */
 package edu.kit.kastel.mcse.ardoco.core.common;
 
 import java.io.File;
@@ -16,13 +16,23 @@ import org.eclipse.jgit.revwalk.RevCommit;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+/**
+ * Utility class for handling repository operations such as shallow cloning and removal of repositories.
+ */
 public class RepositoryHandler {
     private static final Logger logger = LoggerFactory.getLogger(RepositoryHandler.class);
 
     private RepositoryHandler() {
-        super();
     }
 
+    /**
+     * Performs a shallow clone of a repository to the specified location and checks out the desired commit hash.
+     *
+     * @param repositoryLink      the URL of the repository to clone
+     * @param desiredCodeLocation the local directory to clone into
+     * @param desiredHash         the commit hash to check out
+     * @return true if the repository was cloned and checked out successfully, false otherwise
+     */
     public static boolean shallowCloneRepository(String repositoryLink, String desiredCodeLocation, String desiredHash) {
         File codeLocation;
         try {
@@ -36,8 +46,9 @@ public class RepositoryHandler {
             List<RevCommit> commits = new ArrayList<>();
             git.log().setMaxCount(1).call().forEach(commits::add);
             assert commits.size() == 1;
-            if (commits.get(0).getId().startsWith(AbbreviatedObjectId.fromString(desiredHash)))
+            if (commits.getFirst().getId().startsWith(AbbreviatedObjectId.fromString(desiredHash))) {
                 return true;
+            }
 
             // Checkout correct code version
             git.fetch().setUnshallow(true).call();
@@ -49,6 +60,11 @@ public class RepositoryHandler {
         }
     }
 
+    /**
+     * Removes the repository at the specified location.
+     *
+     * @param repositoryLocation the local directory of the repository to remove
+     */
     public static void removeRepository(String repositoryLocation) {
         try {
             FileUtils.deleteDirectory(new File(repositoryLocation));
